# mygenai

./: agui_bridge.py  agui_bridge_delayed_injection.py  app_with_auto_router.py  app_with_auto_router_fnagent.py  auto_router.py  docker-compse-airgap-ollama.yml  dynamic_orchestration.py  fastapi_for_agui_delayed_inj.py  fastapi_pydantic_headers.py  full_api.py  full_api_with_spanoverride.py  main_with_prompt_manager.py  mcp_with_httpmiddleware.py  mem_with_session.py  memory_manger.py  multi_agent.py  prompt_manager.py  sampledb.sql  semantic_routing.py  semantic_routing_new.py  std_api_response.py  system_prompts.py  tool_retriever.py  tool_retriever_llm_rerank.py  tool_retriever_weights.py  tracing.py  tracing_autoeval.py  tracing_with_agent.py
arq/: Dockerfile  arq_worker_pubsub.py  arq_worker_pubsub_retries.py  arq_worker_pubsub_stream_agent_events.py  docker-compose.yml  (+4 more)
monorepo/centralized/: docker-compose.yml  project.toml  pyproject.toml  uv_add_deps.txt
monorepo/centralized/agents-core/: Dockerfile  pyproject.toml
monorepo/centralized/agents-core/agents/: base.py
monorepo/centralized/agents-core/core/: llm.py
monorepo/centralized/agents-core/events/: dispatcher.py
monorepo/centralized/agents-core/workers/: arq_tasks.py  arq_tasks_pubsub.py  arq_tasks_pubsub_events.py  arq_tasks_pubsub_events_tracing.py
monorepo/centralized/api-gateway/: Dockerfile  main.py  main_tracing.py
monorepo/centralized/api-gateway/routers/: agents.py  agents_pubsub.py  agents_pubsub_tracing.py
monorepo/centralized/shared-libs/src/shared-libs/: telemetry.py
(+91 files in other folders)
